--- a/Popular/黄博士爱健康_黄立伟.md
+++ b/Popular/黄博士爱健康_黄立伟.md
@@ -1,5 +1,5 @@
 ## 黄博士爱健康
-<img src="<img src="http://7xqoji.com1.z0.glb.clouddn.com/mytest.jpg" width="100" hegiht="30" align=center />" width="100" hegiht="30" align=center />
+<img src="https://i0.hdslb.com/bfs/album/a775707d1e96580e82e1c41935c6f1477ab5505e.jpg" width="100" hegiht="30" align="center"/>
 
 ### 个人简介
 Genesis健睿仕创始人Jonathan Wong (黄立伟） 新加坡国立大学计算机专业；整体健康医学博士；国际基因检测特聘顾问；亚洲最早的私教系统化研究与实践者 著有《快乐身体，健康根源》和《40后终极健身指南》 拥有40多项健康健身相关认证。
